@@ -20,7 +20,8 @@ have been regenerated by this task.</p>
 <p>Similar to <a href="../CoreTypes/mapper.html#regexp-mapper">regexp
 type mappers</a> this task needs a supporting regular expression
 library and an implementation of
-<code>org.apache.tools.ant.util.regexp.Regexp</code>. See details <a href="#implementation">below</a>. </p>
+<code>org.apache.tools.ant.util.regexp.Regexp</code>.
+See details in the documentation of the <a href=../CoreTypes/regexp.html#implementation">Regexp Type</a>. </p>
 
 <h3>Parameters</h3>
 <table border="1" cellpadding="2" cellspacing="0">
@@ -80,51 +81,11 @@ library and an implementation of
 <p>replaces occurrences of the property name &quot;OldProperty&quot;
  with &quot;NewProperty&quot; in a properties file, preserving the existing
 value, in the file <code>${src}/build.properties</code></p>
-<a name="implementation"/>
-<h3>Choice of regular expression implementation</h3>
-<p>
-Ant comes with
-wrappers for
-<a href="http://java.sun.com/j2se/1.4/docs/api/java/util/regex/package-summary.html" target="_top">the java.util.regex package of JDK 1.4</a>,
-<a href="http://jakarta.apache.org/regexp/" target="_top">jakarta-regexp</a>
-and <a href="http://jakarta.apache.org/oro/" target="_top">jakarta-ORO</a>,
-See <a href="../install.html#librarydependencies">installation dependencies</a>
- concerning the supporting libraries.</p>
-<p>
-The system property <code>ant.regexp.regexpimpl</code> governs which regular expression implementation will be chosen.
-Possible values for this property are :
-<ul>
-<li>
-org.apache.tools.ant.util.regexp.Jdk14RegexpRegexp
-</li>
-<li>
-org.apache.tools.ant.util.regexp.JakartaOroRegexp
-</li>
-<li>
-org.apache.tools.ant.util.regexp.JakartaRegexpRegexp
-</li>
-</ul>
-It can also be another implementation of the interface <code>org.apache.tools.ant.util.regexp.Regexp</code>.
-If <code>ant.regexp.regexpimpl</code> is not defined, ant checks in the order Jdk14Regexp, JakartaOroRegexp,
- JakartaRegexp for the availability of the corresponding library. The first of these 3 which is found will be used.</p>
-<p>
-There are cross-platform issues for matches related to line terminator.
-For example if you use $ to anchor your regular expression on the end of a line
-the results might be very different depending on both your platform and the regular
-expression library you use. It is 'highly recommended' that you test your pattern on
-both Unix and Windows platforms before you rely on it.
-<ul>
-    <li>Jakarta Oro defines a line terminator as '\n' and is consistent with Perl.</li>
-    <li>Jakarta RegExp uses a system-dependant line terminator.</li>
-    <li>JDK 1.4 uses '\n', '\r\n', '\u0085', '\u2028', '\u2029' as a default
-    but is configured in the wrapper to use only '\n' (UNIX_LINE)</li>
-</ul>
-<em>We <b>strongly</b> recommend that you use Jakarta Oro.</em>
-</p>
+
 <h3>Parameters specified as nested elements</h3>
 <p>This task supports a nested <a href="../CoreTypes/fileset.html">FileSet</a>
    element.</p>
-<p>This task supports a nested <i>Regexp</i> element to specify
+<p>This task supports a nested <i><a href="../CoreTypes/regexp.html">Regexp</a></i> element to specify
    the regular expression.  You can use this element to refer to a previously
    defined regular expression datatype instance.</p>
 <blockquote>
